Style: trying to debug the link issue on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -467,7 +467,7 @@ footer {
 			text-decoration: none;
 			padding: 5px;
 			font-size: 1.2em;
-			color: #DAE9FB;
+			color: red;
 			-webkit-transition: background-color .2s ease-in-out;
 			   -moz-transition: background-color .2s ease-in-out;
 			    -ms-transition: background-color .2s ease-in-out;
